kubernetes/apps/home/teslamate/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teslamate
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "teslamate.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: teslamate
          port: 4000
